podinfo/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
      #cert-manager.io/cluster-issuer: letsencrypt-staging
    cert-manager.io/cluster-issuer: ca-issuer
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: default-authentik@kubernetescrd
  name: podinfo
  namespace: podinfo
spec:
  ingressClassName: traefik
  rules:
  - host: podinfo.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: podinfo
            port:
              number: 9898
